--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>Calendar</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>This is a small pet project to get acquainted with the library and work with time</noscript>
     <div id="root"></div>
   </body>
 </html>
